@@ -236,7 +236,7 @@ cnvToFcall (iCode * ic, eBBlock * ebp)
   if (currFunc)
     FUNC_HASFCALL (currFunc->type) = 1;
 
-  if (TARGET_IS_PIC16 || TARGET_IS_PIC)
+  if (TARGET_PIC_LIKE)
     {
       /* normally these functions aren't marked external, so we can use their
        * _extern field to mark as already added to symbol table */
@@ -337,7 +337,7 @@ found:
   if (currFunc)
     FUNC_HASFCALL (currFunc->type) = 1;
 
-  if (TARGET_IS_PIC16 || TARGET_IS_PIC)
+  if (TARGET_PIC_LIKE)
     {
       /* normally these functions aren't marked external, so we can use their
        * _extern field to marked as already added to symbol table */
@@ -433,7 +433,7 @@ found:
   if (currFunc)
     FUNC_HASFCALL (currFunc->type) = 1;
 
-  if (TARGET_IS_PIC16 || TARGET_IS_PIC)
+  if (TARGET_PIC_LIKE)
     {
       /* normally these functions aren't marked external, so we can use their
        * _extern field to marked as already added to symbol table */
@@ -531,7 +531,7 @@ found:
   if (currFunc)
     FUNC_HASFCALL (currFunc->type) = 1;
 
-  if (TARGET_IS_PIC16 || TARGET_IS_PIC)
+  if (TARGET_PIC_LIKE)
     {
       /* normally these functions aren't marked external, so we can use their
        * _extern field to marked as already added to symbol table */
@@ -636,7 +636,7 @@ found:
   if (currFunc)
     FUNC_HASFCALL (currFunc->type) = 1;
 
-  if (TARGET_IS_PIC16 || TARGET_IS_PIC)
+  if (TARGET_PIC_LIKE)
     {
       /* normally these functions aren't marked external, so we can use their
        * _extern field to marked as already added to symbol table */
@@ -820,7 +820,7 @@ found:
   if (currFunc)
     FUNC_HASFCALL (currFunc->type) = 1;
 
-  if (TARGET_IS_PIC || TARGET_IS_PIC16)
+  if (TARGET_PIC_LIKE)
     {
       /* normally these functions aren't marked external, so we can use their
        * _extern field to marked as already added to symbol table */
